# rgov

./: .gitignore  LICENSE  PROJECT_REVIEW_POST_MORTEM.md  README.md  debug_error.txt  integration_failure.txt  integration_failure_2.txt  isolation_failure.txt  pyproject.toml  v2_failure.txt
.github/workflows/: verify_integrity.yml
docs/: 00_OVERVIEW.md  01_SPEC.md  02_ARCHITECTURE.md  03_INVARIANTS.md  05_NON_GOALS.md  06_MEMORY_ADMISSIBILITY.md  08_PROJECT_REVIEW_POST_MORTEM.md  AGENT_RULES.md  SPEC.md  STATUS.md  TESTING.md  VERSIONS.md
docs/process/: CONTRIBUTIONS_AND_CHANGES.md
docs/versions/: v1.md  v3.md
src/: __init__.py  generators.py  json_logger.py  policy.py  policy_storage.py  replay.py  window.py  workload.py
src/cgroup/: __init__.py  cpu.py  observation.py  orchestrator.py  orchestrator_v2.py
tests/: __init__.py  test_adversarial.py  test_invariants.py  test_replay.py  test_stability.py  test_v3_observability.py
tests/cgroup/: __init__.py  conftest.py  mock_kernel.py  test_integration.py  test_v2_integration.py
versions/: v0.md  v2.md  v4.md
